--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,10 +1,12 @@
 project:
   type: website
   output-dir: docs
-  
+    
 
 website:
   title: "track_vacation"
+
+  
   navbar:
     left:
       - href: index.qmd
@@ -18,6 +20,8 @@ format:
       - brand
     css: styles.css
     toc: true
+    
+    server: shiny
 
 
 
